--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@rainbow-me/rainbowkit": "^2.2.0",
     "@tanstack/react-query": "^5.61.4",
+    "@upstash/redis": "^1.34.3",
+    "@vercel/blob": "0.26.0",
     "ai": "^4.0.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
